# Parallel-Computing

./: .gitignore  CMakeLists.txt  README.md  cuda_program.cu  data.csv  data_test.csv  generate.py  nvidia-run.ps1  openmp.cpp  parallel_omp.cpp  requirements.txt  run.ps1  sequential.cpp  utils.cpp  utils.hpp
notebooks/: csv_to_dokuwiki_table.py  grouped.csv  grouped_doku.csv  plots.ipynb
output/: cuda_program_output.csv  openmp_output.csv  sequential_output.csv
src/: cuda_time_kernel.cu  openmp.cpp  sequential.cpp  utils.hpp
